@@ -4,7 +4,8 @@ PyVISA Changelog
 1.10 (unreleased)
 -----------------
 
-No changes yet
+- fixing missing argument for USBInstrument.usb_control_out. homogeneous naming:
+  usb_control_out -> control_out. warnings for deprecated usb_control_out.
 
 
 1.9.1 (2018-08-13)
